--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 </head>
 <body>
 <h1>Welcome to my home page!</h1>
-<a href="test.html">前往测试页面</a>
+<a href="02 作业2.html">前往测试页面</a>
 </body>
 </html>
