--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="ex2.css">
 </head>
 <body>
+ <a href="test.html">前往测试页面</a>
 <div class="content">
 <h1>云南旅游心得体会 </h1>
 <p>很久以前就听说素有“彩云之南”的云南四季如春、气候宜人，景色秀丽，犹如人间仙境。</p>
