--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>作业1</title>
+    <title>测试页面1</title>
     <link rel="stylesheet" href="ex2.css">
 </head>
 <body>
